
syntax = "proto2";

import "eco/signal_header.proto";
import "si/reset_origin_result.proto";
import "lsm_geoml/pose_pod.proto";
import "si/dynamic_object_serializable.proto";
import "si/static_object_serializable.proto";

package pb.si.ap_env_model_port;

message ApEnvModelPort{
  optional uint32 uiVersionNumber = 2124;
  optional pb.eco.signal_header.SignalHeader sSigHeader = 1033;
  optional uint32 numberOfStaticObjects_u8 = 186;
  optional uint32 numberOfDynamicObjects_u8 = 3825;
  optional pb.si.reset_origin_result.ResetOriginResult resetOriginResult = 1953;
  optional pb.lsm_geoml.pose_pod.Pose_POD transformationToOdometry = 2384;
  optional pb.lsm_geoml.pose_pod.Pose_POD egoVehiclePoseForAP = 2189;
  repeated pb.si.dynamic_object_serializable.DynamicObjectSerializable dynamicObjects = 2076;
  repeated pb.si.static_object_serializable.StaticObjectSerializable staticObjects = 1503;
}

message ApEnvModelPort_array_port{
   repeated pb.si.ap_env_model_port.ApEnvModelPort data = 436;
}
