
syntax = "proto2";


package pb.si.uint16_serializable;

message Uint16Serializable{
  optional uint32 actualSize = 3009;
  repeated uint32 array = 3639;
}

message Uint16Serializable_array_port{
   repeated pb.si.uint16_serializable.Uint16Serializable data = 3666;
}
