
syntax = "proto2";

import "si/slot_coordinates_m_serializable.proto";
import "si/parking_scenario_types.proto";
import "si/parking_scenario_side_types.proto";
import "si/parking_box_delimiter.proto";
import "si/virtual_line_serializable.proto";
import "cml/vec2_df_pod.proto";

package pb.si.parking_box_serializable;

message ParkingBoxSerializable{
  optional uint32 parkingBoxID_nu = 444;
  optional pb.si.slot_coordinates_m_serializable.SlotCoordinates_mSerializable slotCoordinates_m = 338;
  optional uint32 existenceProb_perc = 2424;
  optional pb.si.parking_scenario_types.ParkingScenarioTypes parkingScenario_nu = 4094;
  optional pb.si.parking_scenario_side_types.ParkingScenarioSideTypes parkingScenarioSide_nu = 3946;
  repeated pb.si.parking_box_delimiter.ParkingBoxDelimiter delimiters = 1849;
  optional uint32 numValidDelimiters_nu = 228;
  optional uint32 numVirtualLines_nu = 1173;
  repeated pb.si.virtual_line_serializable.VirtualLineSerializable virtualLines = 29;
  optional uint32 groupID_nu = 3958;
  optional uint32 priority_nu = 1627;
  repeated pb.cml.vec2_df_pod.Vec2Df_POD parkingBoxRoadSideEdge = 2866;
  optional bool hasValueParkingBoxRoadSideEdge = 1219;
  repeated pb.cml.vec2_df_pod.Vec2Df_POD cnnBoxRoadSideEdge = 981;
  optional bool hasValueCnnBoxRoadSideEdge = 913;
}

message ParkingBoxSerializable_array_port{
   repeated pb.si.parking_box_serializable.ParkingBoxSerializable data = 2234;
}
